<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_call_ended">Call ended</string>
    <string name="acc_incoming_audio_call_from">Incoming audio call from %1$s. Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="acc_incoming_call_from">Incoming video call from %1$s. Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="action_send_feedback">Help &amp; feedback</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Duo</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_call_perm_dialog_body">"To add your Duo call history to your phone's call history, allow Duo to manage &amp; make phone calls."</string>
    <string name="ask_call_perm_dialog_no">No thanks</string>
    <string name="ask_call_perm_dialog_title">Keep track of your Duo calls</string>
    <string name="ask_call_perm_dialog_yes">Allow</string>
    <string name="audio_checkbox_accessible_content">Audio call mode</string>
    <string name="audio_dump_recording_done">Audio diagnostic dump recording is done</string>
    <string name="audio_dump_recording_in_progress">Recording audio diagnostic dump</string>
    <string name="audio_launch_notification_0">Try a voice call on Google Duo</string>
    <string name="audio_launch_notification_1">Try an audio call on Google Duo</string>
    <string name="audio_launch_notification_2">Try free voice calls on Google Duo</string>
    <string name="audio_launch_notification_3">Try free voice calls on Google Duo, even on slow networks</string>
    <string name="audio_launch_notification_4">%s Try free voice calls on Google Duo</string>
    <string name="audio_launch_notification_title">New in Duo</string>
    <string name="audio_unsupported_dialog_dismiss">GOT IT</string>
    <string name="audio_unsupported_dialog_text_1">"%s has an old version of Duo that doesn't support audio calls."</string>
    <string name="audio_unsupported_dialog_text_2">Try a video call and ask them to update Duo.</string>
    <string name="audio_unsupported_dialog_title">"%s can't take audio calls yet."</string>
    <string name="backend_url_name_autopush">Autopush</string>
    <string name="backend_url_name_daily">Daily</string>
    <string name="backend_url_name_friday">Friday</string>
    <string name="backend_url_name_localhost">Localhost</string>
    <string name="backend_url_name_monday">Monday</string>
    <string name="backend_url_name_prod">Prod</string>
    <string name="backend_url_name_saturday">Saturday</string>
    <string name="backend_url_name_thursday">Thursday</string>
    <string name="backend_url_name_tuesday">Tuesday</string>
    <string name="backend_url_name_wednesday">Wednesday</string>
    <string name="background_call_notification_end_call">END CALL</string>
    <string name="background_call_notification_message">Tap to return to the call</string>
    <string name="background_call_notification_title">Ongoing call</string>
    <string name="block_user_failed">Unable to authorize user. Please check the connection and try again.</string>
    <string name="blocked_numbers_activity_label">Authorized numbers</string>
    <string name="blocked_numbers_clear_filter">Clear the search box</string>
    <string name="blocked_numbers_none_text_1">No authorized numbers</string>
    <string name="blocked_numbers_none_text_2">Anyone you authorize will show up here</string>
    <string name="blocked_numbers_number_added_to_block_list">%s has been authorized</string>
    <string name="blocked_numbers_number_removed_to_block_list">%s has been unauthorized</string>
    <string name="blocked_numbers_select_contact">Select a contact</string>
    <string name="blocked_numbers_unblock_no">CANCEL</string>
    <string name="blocked_numbers_unblock_yes">UNAUTHORIZE</string>
    <string name="blocked_numbers_undo">UNDO</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_accept_call">Accept call</string>
    <string name="button_disconnect_call">Hang up</string>
    <string name="button_record_message">Record message</string>
    <string name="button_reject_call">Decline call</string>
    <string name="button_send_video_message">Send video message</string>
    <string name="button_stop_record_message">Stop record</string>
    <string name="call_continuing_in_audio_mode">Call continuing in audio mode</string>
    <string name="call_diagnostic_log_missing">Call diagnostic log is empty.</string>
    <string name="call_diagnostic_log_title">Call Diagnostic Log</string>
    <string name="call_ended_ice_disconnect">Network error. Please try again.</string>
    <string name="call_error_message">"Oops, that shouldn't have happened! We had a fatal error."</string>
    <string name="call_error_title">Fatal error</string>
    <string name="call_failed_cell_call_conflict">Cannot start video call while on a phone call.</string>
    <string name="call_from">Call from %s</string>
    <string name="call_incoming_accept">ACCEPT</string>
    <string name="call_incoming_audio_call">Audio call from</string>
    <string name="call_incoming_audio_handset">Handset</string>
    <string name="call_incoming_audio_speakerphone">Speakerphone</string>
    <string name="call_incoming_decline">DECLINE</string>
    <string name="call_incoming_swipe_down_to_decline">Swipe down to decline</string>
    <string name="call_incoming_swipe_to_answer">Swipe up to answer</string>
    <string name="call_incoming_swipe_to_unlock">Swipe up to unlock your phone</string>
    <string name="call_incoming_video_call">Incoming video call</string>
    <string name="call_rating_feedback_include_call_diagnostics">Include call diagnostics</string>
    <string name="call_rating_feedback_option_bad_audio">Audio quality</string>
    <string name="call_rating_feedback_option_bad_video">Video quality</string>
    <string name="call_rating_feedback_option_detailed">Something else</string>
    <string name="call_rating_feedback_option_disconnect">Disconnected unexpectedly</string>
    <string name="call_rating_feedback_option_echo">Echo</string>
    <string name="call_rating_feedback_option_list_header">What was the problem?</string>
    <string name="call_rating_feedback_preview">PREVIEW</string>
    <string name="call_rating_feedback_skip">SKIP</string>
    <string name="call_rating_feedback_submit">NEXT</string>
    <string name="call_rating_fragment_rating_bad">BAD</string>
    <string name="call_rating_fragment_rating_dismiss">DISMISS</string>
    <string name="call_rating_fragment_rating_good">GOOD</string>
    <string name="call_rating_fragment_title">How was the call quality?</string>
    <string name="callee_is_unavailable">%s is unavailable.</string>
    <string name="camera_error_message">"Unable to access the camera. Please check if it's being used by another app, or restart your phone."</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_live">Your video is visible</string>
    <string name="camera_permission_dialog_message">To make video calls, give camera access first.</string>
    <string name="camera_permission_dialog_title">Give camera access</string>
    <string name="camera_switched_to_back">Switched to back camera</string>
    <string name="camera_switched_to_front">Switched to front camera</string>
    <string name="can_send_clip">Send to %s</string>
    <string name="carrier_block_dialog_body">Your carrier may be blocking data from Google Duo. This could cause poor call quality or dropped calls.</string>
    <string name="carrier_block_dialog_title">Poor Connection</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="client_network_error_prompt">Network error. Please check your connection.</string>
    <string name="close_activity">CLOSE</string>
    <string name="contact_action_add_to_contacts">Add to contacts</string>
    <string name="contact_action_audio_call">Start audio call</string>
    <string name="contact_action_block_number">Authorize number</string>
    <string name="contact_action_content_desc">Actions for this contact</string>
    <string name="contact_action_remove_from_list">Remove from list</string>
    <string name="contact_action_video_call">Start video call</string>
    <string name="contact_call_mode_audio_desc">Audio</string>
    <string name="contact_call_mode_video_desc">Video</string>
    <string name="contacts_direct_invite">Invite to Duo</string>
    <string name="contacts_list_back">Back</string>
    <string name="font_fontFamily_roboto_medium">sans-serif</string>
    <string name="permission_camera_detail">Give Duo access to your camera so you can make video calls.</string>
    <string name="permission_camera_no_signal">Show yourself</string>
    <string name="permission_settings_button_label">GIVE ACCESS</string>
    <string name="pref_live_ring_detail">"See the caller's video even before you pick up. And, let people you call see your video while their phone is ringing.

Knock Knock works if the person you call has you as a contact. And you'll only see video from callers you have as contacts."</string>
    <string name="pref_live_ring_summary">"Knock Knock lets you see who's calling"</string>
    <string name="video_ring_intro_confirm">GOT IT</string>
    <string name="video_ring_intro_desc">"If %s has you as a contact, they'll see you while their phone is ringing."</string>
    <string name="video_ring_intro_title">Smile! Knock Knock is on</string>
    <string name="welcome_activity_menu_select_label">Select to review</string>
    <string name="welcome_activity_menu_select_privacy">Google Privacy Policy</string>
    <string name="welcome_activity_menu_select_tos">Google Terms of Service</string>
</resources>