<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="215.0dip" android:layout_height="215.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/illu_edu_knock_knock" />
    <TextView android:textSize="20.0sp" android:textColor="@color/blue_grey_800" android:layout_gravity="center_horizontal" android:layout_width="260.0dip" android:layout_height="wrap_content" android:text="@string/pref_live_ring_summary" android:lineSpacingMultiplier="1.1" android:fontFamily="@string/font_fontFamily_roboto_medium" />
    <TextView android:textSize="16.0sp" android:textColor="@color/black_56_percent" android:layout_gravity="center_horizontal" android:layout_width="260.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip" android:text="@string/pref_live_ring_detail" android:lineSpacingMultiplier="1.2" android:fontFamily="sans-serif" />
</LinearLayout>