<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center|left" android:id="@id/welcome_activity_menu_select_label" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/welcome_activity_menu_select_label" android:layout_alignParentTop="true" style="@style/TachyonFontSignUp15" />
    <Button android:id="@id/welcome_select_review_button_tos" android:layout_width="fill_parent" android:text="@string/welcome_activity_menu_select_tos" android:layout_below="@id/welcome_activity_menu_select_label" style="@style/TachyonFontSignUp16MenuButton" />
    <Button android:id="@id/welcome_select_review_button_privacy" android:layout_width="fill_parent" android:text="@string/welcome_activity_menu_select_privacy" android:layout_below="@id/welcome_select_review_button_tos" style="@style/TachyonFontSignUp16MenuButton" />
</RelativeLayout>