<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:background="@color/registration_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="start|bottom|center" android:orientation="vertical" android:id="@id/video_ring_intro_content_container" android:layout_width="272.0dip" android:layout_height="fill_parent">
        <TextView android:textSize="24.0sp" android:textColor="@color/cyan_a_200" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/video_ring_intro_title" />
        <TextView android:textSize="16.0sp" android:textColor="@color/blue_grey_50" android:id="@id/video_ring_intro_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="36.0dip" android:text="@string/video_ring_intro_desc" android:lineSpacingMultiplier="1.5" />
        <Button android:textSize="14.0sp" android:textColor="@color/cyan_a_200" android:layout_gravity="end" android:id="@id/video_ring_intro_confirm" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginBottom="36.0dip" android:text="@string/video_ring_intro_confirm" android:fontFamily="sans-serif-medium" />
    </LinearLayout>
</RelativeLayout>