<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/missing_camera_container" android:background="@color/common_light_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="78.0dip" android:layout_marginBottom="260.0dip" android:layout_alignParentTop="true" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/missing_camera_view_texts" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="true">
            <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_camera_no_signal" style="@style/Tachyon_Permission_Camera_Font_01" />
            <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip" android:text="@string/permission_camera_detail" style="@style/Tachyon_Permission_Camera_Font_02" />
            <TextView android:gravity="center_horizontal" android:id="@id/missing_camera_settings_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_settings_button_label" style="@style/Tachyon_Permission_Camera_Font_03" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>