<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root_contact_actions" android:background="@color/common_light_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/contact_action_content_desc"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/floating_menu" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="8.0dip" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@style/TachyonContactOptionsFloatingMenu">
        <com.google.android.apps.tachyon.ui.RTLTextView android:ellipsize="end" android:id="@id/contact_option_header_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:maxLines="2" style="@style/TachyonFontContactOptions7Header" />
        <com.google.android.apps.tachyon.ui.RTLTextView android:id="@id/contact_option_sub_header_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" style="@style/TachyonFontContactOptions10SubHeader" />
        <RelativeLayout android:id="@id/optional_spacer_16dp" android:layout_width="fill_parent" android:layout_height="16.0dip" />
        <RelativeLayout android:id="@id/required_spacer_8dp" android:layout_width="fill_parent" android:layout_height="8.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_add_contact" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contact_action_add_to_contacts">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_person_add_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_add_contact" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_action_add_to_contacts" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_video_call" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contact_action_video_call">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_videocam_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_video_call" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_action_video_call" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_audio_call" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contact_action_audio_call">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_call_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_audio_call" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_action_audio_call" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_invite" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contacts_direct_invite">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_textsms_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_invite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contacts_direct_invite" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_remove_from_list" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contact_action_remove_from_list">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_close_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_remove_from_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_action_remove_from_list" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/contact_action_container_block" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/contact_action_block_number">
            <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/quantum_ic_do_not_disturb_on_white_24" android:tint="@color/button_left_icon" />
            <TextView android:id="@id/contact_option_block" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_action_block_number" style="@style/TachyonFontContactOptions8OptionButton" />
        </LinearLayout>
        <View android:id="@id/contact_actions_drop_shadow" android:background="@drawable/contact_actions_drop_shadow" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="5.0dip" />
    </LinearLayout>
</RelativeLayout>