<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/call_root_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/camera_live_layout" android:background="@color/blue_grey_900" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_alignParentTop="true">
        <View android:layout_gravity="center" android:id="@id/camera_live_dot" android:background="@drawable/camera_live_dot" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginRight="8.0dip" />
        <TextView android:layout_gravity="center" android:id="@id/camera_live_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/camera_live" style="@style/TachyonIncomingOutgoingTextStyle4" />
    </LinearLayout>
    <LinearLayout android:id="@id/outgoing_call_header_container" android:layout_below="@id/camera_live_layout" style="@style/IncomingOutgoingOtherCallerHeader">
        <include layout="@layout/fragment_call_header" />
    </LinearLayout>
    <include android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/avatar_in_call" />
    <RelativeLayout android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="36.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <ImageButton android:id="@id/button_outgoing_call_send_message" android:background="@drawable/call_decline_background_selector" android:padding="16.0dip" android:visibility="gone" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/quantum_ic_send_white_24" android:scaleType="fitCenter" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/button_send_video_message" />
        <ImageView android:id="@id/button_outgoing_call_hangup_shadow" android:visibility="gone" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginTop="2.0dip" android:src="@drawable/circular_background_shadow" android:layout_below="@id/button_outgoing_call_send_message" android:layout_centerHorizontal="true" />
        <ImageButton android:id="@id/button_outgoing_call_hangup" android:background="@drawable/call_decline_background_selector" android:padding="16.0dip" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/quantum_ic_call_end_white_24" android:scaleType="fitCenter" android:layout_below="@id/button_outgoing_call_send_message" android:layout_centerHorizontal="true" android:contentDescription="@string/button_disconnect_call" />
    </RelativeLayout>
</RelativeLayout>